tests/negative/test_attrs_non_type_compiled.orb
fnc main () () {
    sym x:i32;
    +::((abcd x)) 0;
};